<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/categoryImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/categoryimage" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="@string/category_name"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/arrowImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_arrow_forward_24"
        app:srcCompat="@drawable/baseline_arrow_forward_24"
        android:contentDescription="@string/arrowimage" />

</LinearLayout>